Fix column mapping and optimize database performance
- Fix Excel column mapping to match actual file structure
- Remove missing columns (Source File ID, Source Namespace, Source Created By)
- Correct column order and data types (target_file_id as BIGINT)
- Implement drop-and-recreate index strategy for optimal import performance
- Add detailed sheet-by-sheet processing feedback with timing
- Remove AUTOINCREMENT overhead from primary key
- Suppress JVM warnings for cleaner output
- Update documentation to reflect current functionality
- Remove references to deleted CSV extraction components

Performance improvements:
- Indexes dropped before bulk import, recreated after completion
- Optimized for both new database creation and appending to existing databases
- Better memory management and reduced processing overhead